index css fix on firefox some css for blog stuff

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 -35px 0 -35px;
   display: -webkit-flex;
   display: -ms-flexbox;
+  display: -moz-flex;
   display: flex;
   align-items: stretch;
+  flex-wrap: wrap;
 }
 .indextitles {
   margin-bottom: 20px;
@@ -20,8 +22,6 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #262626;
   color: #fff;
   padding: 0;
-  display: -webkit-flex;
-  display: -ms-flexbox;
   display: flex;
   align-items: stretch;
 }
@@ -30,6 +30,7 @@ h1, h2, h3, h4, h5, h6 {
   display: -ms-flexbox;
   display: flex;
   flex: 1;
+  max-width: 100%;
 }
 .indexprojectleft {
   width: 50%;
@@ -716,4 +717,65 @@ footer {
 .email:hover,
 .email:active {
   background: #007091;
+}
+
+
+/* blog stuff */
+
+.blogcontainer {
+  border-bottom: 1px solid #666;
+}
+.project:last-of-type > .blogcontainer {
+  border-bottom: none;
+}
+
+.highlight pre {
+  background: none;
+  border: none;
+}
+
+.img-center {
+  display: block;
+  margin: 20px auto 20px auto;
+  max-width: 75%;
+  text-align: center;
+  font-style: italic;
+}
+
+.img-center img {
+  max-width: 100%;
+  margin-bottom: 5px;
+}
+
+.img-left {
+  display: block;
+  float: left;
+  max-width: 50%;
+  text-align: center;
+  margin: 10px 20px 20px 0;
+  font-style: italic;
+}
+
+.img-left img {
+  max-width: 100%;
+  margin-bottom: 5px;
+}
+
+.img-right {
+  display: block;
+  float: right;
+  max-width: 50%;
+  text-align: center;
+  margin: 10px 0 20px 20px;
+  font-style: italic;
+}
+
+.img-right img {
+  max-width: 100%;
+  margin-bottom: 5px;
+}
+
+.post-links {
+  margin-top: 25px;
+  margin-bottom: 50px;
 }
